--- a/reset.css
+++ b/reset.css
@@ -25,7 +25,7 @@ time, mark, audio, video {
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
- header, hgroup, menu, nav, section {
+footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
